--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ section {
 
 .logo {
 	padding: 10px 10px 10px 10px;
+	width: 100px;
+	height: auto;
 }
 
 ul {
@@ -129,6 +131,7 @@ footer {
 	padding: 20px;
 	text-align: center;
 	font-family: "Noto Sans", sans-serif;
+	font-size: 18px;
 	
 }
 
@@ -170,6 +173,13 @@ header h1 {
 }
 section {
 	font-size: 16px;
+}
+.logo {
+	width: 140px;
+	height: auto;
+}
+li a {
+  font-size:22px;
 }
 
 }
